# vector

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  config.vector  setup.py
application/: CMakeLists.txt
application/src/: application.cpp
assets/shaders/: fragment_shader.glsl  fragment_shader_cube.glsl  vertex_shader.glsl
build_scripts/: build_glfw.bat  imgui.bat  imgui.sh  setup.bat  setup.sh  setup_glad.bat  setup_glad.sh
engine/: CMakeLists.txt  application.cpp  application.h
engine/core/camera/: camera.h
engine/core/log/: log.cpp  log.h
engine/core/settings/: settings.cpp  settings.h
engine/core/window/: event.cpp  event.h  window.cpp  window.h
engine/core/window/imgui/: imgui_manager.cpp  imgui_manager.h
engine/nodes/2D/: node2d.h  texture2d.cpp  texture2d.h
engine/nodes/3D/: cube3d.cpp  cube3d.h  lighting_cube3d.cpp  lighting_cube3d.h  node3d.h
engine/renderer/: opengl_includes.h  render_api_factory.cpp  render_api_factory.h  renderer.cpp  renderer.h
engine/renderer/buffer/: buffer.h  opengl_indexbuffer.cpp  opengl_indexbuffer.h  opengl_shader_storagebuffer.cpp  opengl_shader_storagebuffer.h  opengl_uniformbuffer.cpp  opengl_uniformbuffer.h  opengl_vertexbuffer.cpp  opengl_vertexbuffer.h
engine/renderer/context/: opengl_context.cpp  opengl_context.h
engine/renderer/framebuffer/: framebuffer.h  opengl_framebuffer.cpp  opengl_framebuffer.h
engine/renderer/pipeline_state/: opengl_pipeline_state.cpp  opengl_pipeline_state.h
engine/renderer/render_command/: opengl_render_command.h  opengl_render_command_queue.h  render_command.h  render_command_queue.h
engine/renderer/render_pass/: opengl_render_pass.h  render_pass.h
engine/renderer/renderbuffer/: opengl_renderbuffer.cpp  opengl_renderbuffer.h
engine/renderer/shader/: opengl_shader.cpp  opengl_shader.h  shader.h
engine/renderer/texture/: opengl_texture.cpp  opengl_texture.h  texture.h
engine/renderer/vertex_array/: opengl_vertex_array.cpp  opengl_vertex_array.h  vertex_array.h
engine/scene/: scene.cpp  scene.h  scene_manager.cpp  scene_manager.h  scene_node.h
engine/scene/test_scene/: test_scene.cpp  test_scene.h
engine_src/: CMakeLists.txt  engine_main.cpp
engine_src/src/: engine_main.cpp
lib_application/: CMakeLists.txt
lib_application/include/: application.h  camera.h  scene.h  scene_manager.h  scene_node.h  settings.h
lib_application/nodes/: simple_node.cpp  simple_node.h  triangle_node.cpp  triangle_node.h
lib_application/nodes/2D/: node2d.h  texture2d.cpp  texture2d.h
lib_application/nodes/3D/: cube3d.cpp  cube3d.h  lighting_cube3d.cpp  lighting_cube3d.h  node3d.h
lib_application/scenes/test_scene/: test_scene.cpp  test_scene.h
lib_application/src/: application.cpp  scene.cpp  scene_manager.cpp  scene_node.cpp  settings.cpp
lib_log/: CMakeLists.txt
lib_log/include/: log.h
lib_log/src/: log.cpp
lib_logging/: CMakeLists.txt
lib_renderer/: CMakeLists.txt
lib_renderer/include/: buffer.h  context.h  frambuffer.h  framebuffer.h  pipeline_state.h  render_api_factory.h  render_command_queue.h  render_pass.h  renderbuffer.h  renderer.h  shader.h  texture.h  vertex_array.h
lib_renderer/src/: render_api_factory.cpp  renderer.cpp
lib_renderer/src/concrete/: renderer.cpp
lib_renderer/src/concrete/opengl/: opengl_context.cpp  opengl_context.h  opengl_framebuffer.cpp  opengl_framebuffer.h  opengl_indexbuffer.cpp  opengl_indexbuffer.h  opengl_pipeline_state.cpp  opengl_pipeline_state.h  opengl_render_command_queue.cpp  opengl_render_pass.cpp  opengl_render_pass.h  opengl_renderbuffer.cpp  opengl_renderbuffer.h  opengl_shader.cpp  opengl_shader.h  opengl_texture.cpp  opengl_texture.h  opengl_uniformbuffer.cpp  opengl_uniformbuffer.h  opengl_vertex_array.cpp  opengl_vertex_array.h  opengl_vertexbuffer.cpp  opengl_vertexbuffer.h
lib_renderer/src/concrete/opengl/buffers/: opengl_indexbuffer.cpp  opengl_indexbuffer.h  opengl_shader_storagebuffer.h  opengl_uniformbuffer.cpp  opengl_uniformbuffer.h  opengl_vertexbuffer.cpp  opengl_vertexbuffer.h
lib_window/: CMakeLists.txt
lib_window/include/: event.h  imgui_manager.h  window.h
lib_window/src/: event.cpp  imgui_manager.cpp  window.cpp
other/: CMakeLists.txt
